# capsule

./: .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .libfake.c.swp  CMakeLists.txt  Cargo.toml  Gemfile  LICENSE  Makefile  README.md  capsule-run.cpp  capsule.cpp  capsule.h  capsule_cocoa.m  capsule_d3d11.cpp  capsule_dx8.cpp  convert-all.sh  libGL.so.1  libfake.c  libfake.cpp  libfake.h  libfake_cocoa.m  main.c  main.cpp  shader.frag  shader.vert  vendor-capnpc-windows.sh  vendor-capnpc.sh  vendor-env.sh  vendor-ffrust.sh
PolyHook/: CMakeLists.txt
capsulerun/: .gitignore  CMakeLists.txt  Cargo.toml  capsulerun.go  dependencies.cmake.in  go.mod  go.sum  main.go
capsulerun/capsule/: app.go  launch_darwin.go  launch_linux.go
capsulerun/include/: capsulerun.h  capsulerun_args.h  capsulerun_linux.h  capsulerun_macos.h  capsulerun_macros.h  capsulerun_mainloop.h  capsulerun_types.h  capsulerun_windows.h
capsulerun/src/: args.h  audio_intercept_receiver.cc  audio_intercept_receiver.h  audio_receiver.h  capsulerun.h  capsulerun_hotkey.h  capsulerun_linux.h  capsulerun_macos.h  capsulerun_macros.h  capsulerun_types.h  comm.rs  connection.cc  connection.h  encoder.cc  encoder.h  encoder.rs  fps_counter.cc  fps_counter.h  hotkey.h  locking_queue.h  logging.h  macros.h  main.cc  main.cpp  main.rs  main_loop.cc  main_loop.h  paths.cc  router.cc  router.h  runner.cc  runner.h  session.cc  session.h  video_receiver.cc  video_receiver.h
capsulerun/src/linux/: PulseReceiver.cc  PulseReceiver.cpp  PulseReceiver.h  encoder.cpp  env.cpp  env.h  executor.cc  executor.h  hotkey.cc  hotkey.cpp  main.cc  main.cpp  pulse-dynamic.cc  pulse-dynamic.h  pulse.cpp  pulse_dynamic.cc  pulse_dynamic.h  pulse_receiver.cc  pulse_receiver.h
capsulerun/src/macos/: DDHotKeyUtilities.m  bundle_utils.mm  executor.cc  executor.h  hotkey.mm  main.cc  main.cpp
capsulerun/src/runner/: linux_runner.rs  macos_runner.rs  mod.rs  windows.rs  windows_runner.rs
capsulerun/src/shared/: AudioReceiver.cpp  AudioReceiver.h  Connection.cc  Connection.cpp  Connection.h  FPSCounter.cc  FPSCounter.h  LockingQueue.h  MainLoop.cc  MainLoop.cpp  MainLoop.h  OverlayRenderer.cpp  OverlayRenderer.h  Session.cc  Session.cpp  Session.h  ShmemRead.cpp  ShmemRead.h  VideoReceiver.cc  VideoReceiver.cpp  VideoReceiver.h  audio_receiver.h  connection.cc  encoder.cc  encoder.cpp  env.cc  env.cpp  env.h  fps_counter.cc  io.cpp  io.h  locking_queue.h  main.cc  main.cpp  main_loop.cc  main_loop.h  mainloop.c  mainloop.cpp  paths.cc  paths.h  (+4 more)
capsulerun/src/windows/: WasapiReceiver.cpp  WasapiReceiver.h  arguments.cpp  arguments.h  executor.cc  executor.h  hotkey.cc  hotkey.cpp  main.cc  main.cpp  quote.cc  quote.cpp  quote.h  strings.cc  strings.cpp  strings.h  wasapi.cpp  wasapi_receiver.cc  wasapi_receiver.h
crates/comm/: Cargo.toml
crates/comm/src/: lib.rs
crates/gl/: Cargo.toml
crates/gl/src/: constants.rs  lib.rs
crates/hotkey/: Cargo.toml
crates/hotkey/src/: lib.rs  windows.rs
lab/: CMakeLists.txt  README.md
lab/src/lab/: env.cc  env.h  io.cc  io.h  logging.h  packet.cc  packet.h  paths.cc  paths.h  platform.cc  platform.h  strings.cc  strings.h  types.h
legacy/argparse/: CMakeLists.txt
legacy/microprofile/: CMakeLists.txt
libcapsule/: .gitignore  CMakeLists.txt  Cargo.toml  sample.c
libcapsule/PolyHook/: CMakeLists.txt
libcapsule/include/: capsule.h
libcapsule/include/capsule/: README.md  constants.h  dynlib.h  logging.h  messages.fbs  messages.h  messages_generated.h  opengl-constants.h  platform.h
libcapsule/src/: capsule.cc  capsule.cpp  capsule.h  capsule_cocoa.m  capture.cc  capture.h  comm.rs  connection.cc  detour_hook.rs  dynlib.h  ensure.cc  ensure.h  gl_capture.cc  gl_capture.h  gl_capture_callback.h  gl_decs.h  gl_shaders.h  hook.rs  hub.rs  io.cc  io.h  lib.rs  linux_gl_hooks.rs  logging.cc  logging.h  macos_gl_hooks.rs  safe_env.rs  timer.cc  types.rs  windows_gl_hooks.rs
libcapsule/src/capsule/: audio_math.h  constants.h  dynlib.h  logging.h  messages.fbs  messages.h  messages_generated.h  opengl-constants.h  platform.h
libcapsule/src/dxgi/: mod.rs
libcapsule/src/gl/: constants.rs  mod.rs  types.rs
libcapsule/src/hook/: dlsym.rs  dyld.rs  dynamic.rs  extern_detour.rs  extern_dyld.rs
libcapsule/src/linux/: alsa_hooks.cc  dlopen_hooks.cc  dlopen_hooks.h  gl_hooks.cc  gl_hooks.h  hooks.cc  x11.cpp
libcapsule/src/macos/: capsule_CoreAudio.m  capsule_CoreAudio.mm  capsule_NSApplication.m  capsule_NSApplication.mm  capsule_NSOpenGLContext.m  capsule_NSWindow.m  capsule_NSWindow.mm  capsule_cgl.m  capsule_cgl.mm  capsule_macos.h  capsule_macos_utils.h  capsule_macos_utils.mm  capsule_nsopengl.m  capsule_nsview.m  cgl.mm  core_audio.mm  coreaudio_hooks.h  coreaudio_hooks.mm  gl_hooks.cc  gl_hooks.mm  hooks.cc  interpose.h  ns_application.mm  swizzle.h  swizzle.mm
libcapsule/src/shared/: Shm.cpp  Shm.h  capsule.cc  capsule.cpp  gl-capture.cc  gl-capture.cpp  gl-decs.h  gl_capture.cc  io.cc  io.cpp  logging.cc  logging.cpp  opengl-capture.cpp  stb_image.cpp  stb_image.h  timer.cc  timer.cpp
libcapsule/src/windows/: capsule_dxgi.cpp  capsule_dxgi_cinterface.cpp  capsule_hooks.cpp  capsule_opengl.cpp  d3d10-capture.cc  d3d10_capture.cc  d3d11-capture.cc  d3d11-capture.cpp  d3d11-shaders.h  d3d11_capture.cc  d3d11_shaders.h  d3d9-capture.cc  d3d9-capture.cpp  d3d9-hooks.cc  d3d9-hooks.cpp  d3d9-vtable-helpers.cpp  d3d9-vtable-helpers.h  d3d9_capture.cc  d3d9_hooks.cc  d3d9_vtable_helpers.cc  d3d9_vtable_helpers.h  dc-capture.cc  dc-capture.cpp  dc_capture.cc  ddraw-hooks.cpp  dxgi-capture.cpp  dxgi-hooks.cc  dxgi-hooks.cpp  dxgi-util.h  dxgi-vtable-helpers.cpp  dxgi-vtable-helpers.h  dxgi_hooks.cc  dxgi_util.h  dxgi_vtable_helpers.cc  dxgi_vtable_helpers.h  gl-capture.cc  gl_capture.cc  gl_hooks.cc  (+12 more)
test/: .gitignore  CMakeLists.txt  puts.c  rtld.c  win-test.c
test/linux-opengl-dlopen/: Cargo.toml
test/linux-opengl-ld/: Cargo.toml
test/macos-opengl-dlopen/: Cargo.toml
test/macos-opengl-dyld/: Cargo.toml
test/src/: opengl.cpp
test/windows-opengl-loadlibrary/: Cargo.toml
(+133 files in other folders)
