[package]
name = "capsulerun"
version = "0.1.0"
authors = ["Amos Wenger <amos@itch.io>"]
edition = "2018"

[dependencies]
# windows utilities
wincap = { path = "../wincap" }
# command-line arguments
"clap" = "2.33.0"
# RAII utilities
"scopeguard" = "1.0.0"
# utf-16 string handling
"widestring" = "0.4.0"
# utf-8 string literals
"const-cstr" = "0.3.0"
# logging
"log" = "0.4.6"
# logging handler
"env_logger" = "0.6.1"
# woo
"lazy_static" = "1.3.0"
# C types like c_char, c_void
libc = "0.2.51"

# I/O probably
"tokio" = "0.1.19"
# capsule protocol
"proto" = { path = "../proto" }
# capnproto serialization
"capnp" = "0.9.5"
# capnproto RPC
"capnp-rpc" = "0.9.0"
# async stuff
"futures" = "0.1.26"

# unique identifiers
"uuid" = { version = "0.7.4", features = ["v4"] }

# encoding
"ffrust" = { git = "https://github.com/fasterthanlime/ffrust", rev = "0aba78e8099750d1322f447c7af65b424b1437ad" }

# simple errors
simple-error = "0.1.13"

[dependencies.winapi]
version = "0.3.7"
features = ["tlhelp32", "handleapi", "memoryapi", "synchapi", "wow64apiset", "jobapi2"]
