[package]
name = "libcapsule"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[dependencies]
# hook any function, like glXSwapBuffers, etc.
detour = { version = "0.6.0", default-features = false }
# work around some of the rules for Rust lifetimes
lazy_static = "1.3.0"
# UTF-16 handling, useful on Windows
widestring = "0.4.0"
# lets us specify code to run on library initialization (LoadLibraryW/dlopen)
ctor = "0.1.7"
# print without using Rust machinery, useful in a ctor
libc-print = "0.1.7"

[lib]
# cdylibs don't depend on the "Rust runtime", they're just .so/.dylib/.dlls
crate-type = ["cdylib"]
# the 'lib' part is automatically added on Windows/macOS
name = "capsule"
# standard paths
path = "src/lib.rs"

