[package]
name = "libcapsule"
version = "0.1.0"
authors = ["Amos Wenger <amos@itch.io>"]
edition = "2018"

[dependencies]
# windows utilities
"wincap" = { path = "../wincap" }
# hook any function, like glXSwapBuffers, etc.
detour = { version = "0.6.0", default-features = false }
# work around some of the rules for Rust lifetimes
lazy_static = "1.3.0"
# UTF-16 handling, useful on Windows
widestring = "0.4.0"
# print without using Rust machinery, useful in a ctor
libc-print = "0.1.7"
# C types like c_char, c_void
libc = "0.2.50"
# C string literals
const-cstr = "0.3.0"
# logging
"log" = "0.4.6"
# logging handler
"env_logger" = "0.6.1"

[dependencies.winapi]
version = "0.3.7"
features = ["handleapi"]

[lib]
# cdylibs don't depend on the "Rust runtime", they're just .so/.dylib/.dlls
crate-type = ["cdylib"]
# the 'lib' part is automatically added on Windows/macOS
name = "capsule"
# standard paths
path = "src/lib.rs"

