[package]
name = "libcapsule"
version = "0.1.0"
authors = ["Amos Wenger <amos@itch.io>"]
edition = "2018"

[dependencies]
# RPC communications
comm = { path = "../crates/comm" }
# capsule protocol
proto = { path = "../crates/proto" }
# windows utilities
wincap = { path = "../crates/wincap" }
# hooking
hook = { path = "../crates/hook" }
# gl hooking
gl = { path = "../crates/gl" }

# work around some of the rules for Rust lifetimes
lazy_static = "1.3.0"
# UTF-16 handling, useful on Windows
widestring = "0.4.0"
# print without using Rust machinery, useful in a ctor
libc-print = "0.1.7"
# C types like c_char, c_void
libc = "0.2.51"
# C string literals
const-cstr = "0.3.0"
# logging
"log" = "0.4.6"
# logging handler
env_logger = "0.6.1"

# I/O probably
tokio = "0.1.19"
# cf. https://github.com/tokio-rs/tokio/issues/1056
tokio-sync = "0.1.5"

# capnproto serialization
capnp = "0.9.4"
# capnproto RPC
capnp-rpc = "0.9.0"
# async stuff
futures = "0.1.26"

[dependencies.winapi]
version = "0.3.7"
features = ["handleapi", "dxgi1_2", "unknwnbase"]

[lib]
# cdylibs don't depend on the "Rust runtime", they're just .so/.dylib/.dlls
crate-type = ["cdylib"]
# the 'lib' part is automatically added on Windows/macOS
name = "capsule"
# standard paths
path = "src/lib.rs"

