[package]
name = "gl"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[dependencies]
# capsule protocol
proto = { path = "../proto" }
# RPC comms
comm = { path = "../comm" }
# windows utilities
wincap = { path = "../wincap" }
# hooking
hook = { path = "../hook" }

# work around some of the rules for Rust lifetimes
lazy_static = "1.3.0"
# UTF-16 handling, useful on Windows
widestring = "0.4.0"
# logging
"log" = "0.4.6"
# C string literals
const-cstr = "0.3.0"
# print without using Rust machinery, useful in a ctor
libc-print = "0.1.7"
# C types like c_char, c_void
libc = "0.2.51"

[dependencies.winapi]
version = "0.3.7"
features = ["handleapi"]